Fix where edit profile button was not visible

--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -11,7 +11,8 @@
     width: 400px;
     background-image: radial-gradient(at bottom, #151a50 0%,#33156be6 80%, #0b1444e6 100%);
     border-radius: 15px;
-    height: 900px;
+    height: 86vh;
+    max-height: 900px;
     position: sticky;
     top: 100px;
 }
@@ -60,7 +61,8 @@
 
 .profile-image img{
     width: 100%;
-    height: 300px;
+    height: 30vh;
+    max-height: 300px;
     object-fit: cover;
     padding: 20px 0;
 }
